bitfields/tests/compile_error_cases/errors/bitfield_negative_default_value_too_large_for_bits.rs
use bitfields::bitfield;

#[bitfield(u16)]
pub struct Bitfield {
    #[bits(default = -90000000)]
    a: i8,
    #[bits(8)]
    b: u8,
}

fn main() {}
